before and after image js

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/main.js" defer></script>
+    <title>JS Practice  </title>
   </head>
   <body>
-    Hello, world!
+    <figure>
+      <div class="before">
+
+      </div>
+      <img src="https://images.unsplash.com/photo-1626944790309-d6fa83aac18b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" alt="Man in black leather jacket and pants standing on the road staring at the camera" srcset="">
+    </figure>
+    <input type="range" min="0" max="100" id="range">
   </body>
 </html>
